# pymc-server-prerelease

./: .gitignore  .gitmodules  README.md  pyproject.toml  pyproject.toml.cloud  requirements.txt  test.py
configs/: remote_consumer_model.yaml  single_gpu_gcp_l40_24GB.pymc-server.yaml
configs/pymcs-benchmark/: base.yaml
configs/synthetic-consumer/: base.yaml
examples/: other_nuts_samplers.ipynb  reconnect_lib.py  remote_nuts.ipynb  simple_local_mmm.py  stateful_create_actor.py  stateful_create_actorv2.py  stateful_kill_actor.py  stateful_reconnect_actorv2.py  stateful_reconnect_to_actor.py
examples/cluster/: dev.yaml  gcp_start_stop.yaml
examples/traces/: produce_trace.py  s3_minio.py
src/pymc-server/: cli.py  dev.yaml  example.json  launch_cli.py
src/pymc_server/: __init__.py  cli.py  cli_factory.py  dev.yaml  file_merger.py  launch_cli.py  sky_test.py  tmp.yaml
src/pymc_server/commands/: down_cli.py  exec_cli.py  launch_cli.py  start_cli.py  status_cli.py
src/pymc_server/config/: config_connectivity.py
src/pymc_server/config/pymc-marketing/: base.yaml
src/pymc_server/connectivity/: connect_ray.py
src/pymc_server/utils/: launch.py  names.py  yaml.py
src/pymc_server/workDir_test/: test.py
