[project]
name = "pymc-server"
version = "0.0.1"
authors = [
  { name="Chris Krempel", email="chris.krempel@pymc-labs.com" },
  { name="Stephan Mai", email="stephan.mai@pymc-labs.com" },
]
description = "Run PyMC anywhere."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Click",
    "ray[default]",
    "skypilot==0.7.0",
    "hiyapyco'"
]
[dependencies]
#skypilot = "0.7.0"
#hiyapyco= ">=0.6.1,<1"


[project.scripts]
pymcs = "pymc_server.cli:cli"


[project.urls]
Homepage = "https://github.com/pymc-labs/pymc-server"
Issues = "https://github.com/pymc-labs/pymc-server/issues"

[project.optional-dependencies]
client = ["s3fs>=2024.9.0,<2025"]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.feature.client]
platforms = ["linux-64"]

[tool.pixi.feature.client.dependencies]
python = {version = "==3.12.6"}
six = ">=1.16.0,<2"
pip = ">=24.2,<25"
setuptools = ">=75.1.0,<76"
wheel = ">=0.44.0,<0.45"
openai = ">=0.0.1"
google-cloud-sdk = ">=494.0.0"
cryptography = {version = ">=43.0.1"}
arviz = ">=0.20.0"
xarray = ">=2024.9.0,<2025"
zarr = ">=2.18.3,<3"

[tool.pixi.feature.client.pypi-dependencies]
#skypilot = {version = ">=0.6.1,<1", extras = ["gcp", "kubernetes"] }
pymc-server = { path = "./", editable = true }
# TODO: add pymc server
hiyapyco={version=">=0.6.1,<1"}
# google-cloud={version=">=0.34.0,<1"}
ray = {version="==2.37.0", extras=["default", "client"]}
python-dateutil = ">=2.9.0,<3"

[tool.pixi.feature.ray]
dependencies = {python = {version = "==3.12.6"}}

[tool.pixi.feature.ray.pypi-dependencies]
setuptools = ">=75.1.0,<76"
ray = {version = "==2.37.0", extras=["default", "client"]}

[tool.pixi.feature.pymc]
#dependencies = {openai = ">=1.47.0,<2"}
dependencies = {python = {version = "==3.12.6"}}
# TODO:
#numba

[tool.pixi.feature.pymc.pypi-dependencies]
nutpie = ">=0.13.2,<0.14"
zarr = ">=2.18.3,<3"
pytensor = ">=2.25.5,<3"
pymc = ">=5.17.0,<6"



[tool.pixi.environments]
default = ["client"]
server = ["ray", "pymc"]
client = ["client"]
pymc = ["pymc"]

[tool.pixi.dependencies]
setuptools = ">=75.1.0,<76"

